# FractalGenerator

./: README.md
sources/: CMakeLists.txt  DrawingAreaTest.cpp  main.cpp
sources/GUI/: Apfelmaennchen.cpp  Apfelmaennchen.h  ApfelmaennchenWidget.cpp  ApfelmaennchenWidget.h  CMakeLists.txt  Canvas.cpp  Canvas.h  ColorAlgorithm.h  ColorDlg.h  ColorGradientSelection.h  CoordinateInputDlgHelper.cpp  CoordinateInputDlgHelper.h  Drawer.h  Farn.cpp  Farn.h  FarnCtrl.h  FarnViewerWidget.cpp  FarnViewerWidget.h  Fractal.cpp  Fractal.h  FractalCtrl.h  FractalPluginCtrl.h  JuliaSet.cpp  JuliaSet.h  JuliaSetViewerWidget.cpp  JuliaSetViewerWidget.h  JuliaSetWidget.cpp  JuliaSetWidget.h  MainWindow.cpp  MainWindow.h  Makefile  Makefile.am  Makefile.in  MandelbrotSetViewerWidget.cpp  MandelbrotSetViewerWidget.h  Point.h  PointInputDlg.cpp  PointInputDlg.h  SierpinskyCarpetDrawingArea.cpp  SierpinskyCarpetDrawingArea.h  (+8 more)
sources/scripts/cmake/: CMakeSetup.cmake  CompilerSetup.cmake  Functions.cmake
